--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://dbUser:secret747400@cluster0.mqvqgm4.mongodb.net/blog?retryWrites=true&w=majority;
+MONGODB_URI = mongodb+srv://dbUser:secret747400@cluster0.mqvqgm4.mongodb.net/toThePointCode?retryWrites=true&w=majority;
