--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "serve": "nodemon index.js",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "yarn"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,8 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=16.20.1"
   }
 }
