--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
+    "start:dev": "nodemon index.js",
     "serve": "nodemon index.js",
     "start": "nodemon index.js",
     "build": "yarn"
